2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 445/bsps
	* bsp_specs: Hand edited to duplicate change Ralf applied to the CVS
	trunk.

2003-08-14	Joel Sherrill <joel@OARcorp.com>

	* tools/runtest: Add fileio to list of interactive tests.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-06-13	Joel Sherrill <joel@OARcorp.com>

	* console/console.c, startup/linkcmds: Removed warnings.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* startup/Makefile.am, startup/linkcmds, startup/linkcmds-le,
	startup/linkcmds-le.coff: Fix to work around truncated section names.

2003-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Fix typo in CPU_PIECES handling.

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds-le, startup/linkcmds-le.coff: Add FreeBSD sysctl()
	sections.

2003-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to libcpu/sh/*.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* timer/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-11-07	Joel Sherrill <joel@OARcorp.com>
